Grace/tests/gibbs/errors/t099.grace
// ERROR = P1002
class Cat.new()
}
